@@ -575,7 +575,11 @@ General: cleaned up old tdOdd.png image from Default theme
 
 Students: added ability to add/edit/delete notes for students who have not yet reached their start date
 	Edited files /modules/Students/student_view_details_notes_edit*.php, student_view_details_notes_add*.php, student_view_details_notes_delete*.php
-	
+
+Students: fixed bug preventing adding/editing/deleted a student note for a left/expected student
+	Edited files /modules/Students/student_view_details*.php
+
+
 v10.0.00
 --------
 i18n: added Urdu as inactive development language
